Closed
Bug 1273406
Opened 9 years ago
Closed 9 years ago
Crash in isonyvideoprocessor.dll@0x9216
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
RESOLVED
FIXED
mozilla49
People
(Reporter: philipp, Assigned: mozbugz)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(2 files)
|
58 bytes,
text/x-review-board-request
|
cpearce
:
review+
|
Details |
|
MozReview Request: Bug 1273406 - Ugly macros transform into beautiful constexpr goodness - r?cpearce
58 bytes,
text/x-review-board-request
|
cpearce
:
review+
|
Details |
This bug was filed from the Socorro interface and is
report bp-88805b18-a541-44e8-9c03-c8fcb2160517.
=============================================================
Crashing Thread (81)
Frame Module Signature Source
Ø 0 isonyvideoprocessor.dll isonyvideoprocessor.dll@0x9216
Ø 1 isonyvideoprocessor.dll isonyvideoprocessor.dll@0x9ade
Ø 2 isonyvideoprocessor.dll isonyvideoprocessor.dll@0x458a
Ø 3 igd10iumd32.dll igd10iumd32.dll@0x3f0351
Ø 4 igd10iumd32.dll igd10iumd32.dll@0x3f20e6
Ø 5 igd10iumd32.dll igd10iumd32.dll@0x3f58f2
Ø 6 igd10iumd32.dll igd10iumd32.dll@0x389ffa
Ø 7 igd10iumd32.dll igd10iumd32.dll@0x3508bf
Ø 8 igd10iumd32.dll igd10iumd32.dll@0x3488a2
9 d3d11.dll CVideoProcessor::CLS::FinalConstruct(CContext*, CVideoProcessor::TConstructorArgs const*)
10 d3d11.dll CLayeredObjectWithCLS<CVideoProcessor>::FinalConstruct(CVideoProcessor::TConstructorArgs const&, _GUID const&, void**, CLayeredObjectWithCLS<CVideoProcessor>::SInfo const*)
11 d3d11.dll CDecodeContext::CDecodeContext(CDecodeContext::TConstructorArgs const&)
12 d3d11.dll CBridgeImpl<ID3D11LayeredDevice, ID3D11LayeredDevice, CLayeredObject<CDevice> >::CreateLayeredChild(unsigned int, void const*, unsigned long, ID3D11LayeredUseCounted*, _GUID const&, void**)
13 d3d11.dll NDXGI::CDevice::CreateLayeredChild(unsigned int, void const*, unsigned long, ID3D11LayeredUseCounted*, _GUID const&, void**)
14 d3d11.dll NOutermost::CDevice::CreateLayeredChild(unsigned int, void const*, unsigned long, ID3D11LayeredUseCounted*, _GUID const&, void**)
15 d3d11.dll CDevice::CreateVideoProcessor(ID3D11VideoProcessorEnumerator*, unsigned int, ID3D11VideoProcessor**)
16 msvproc.dll CxCodeVideoProcMFTDataHandler::CreateD3D11VideoProcessor()
17 msvproc.dll CxCodeVideoProcMFTDataHandler::OnBeginStreaming()
18 msvproc.dll __report_gsfailure
19 msvproc.dll CMFTBase::ProcessMessage(_MFT_MESSAGE_TYPE, unsigned long)
20 xul.dll mozilla::MFTDecoder::SendMFTMessage(_MFT_MESSAGE_TYPE, unsigned long) dom/media/platforms/wmf/MFTDecoder.cpp:117
21 xul.dll mozilla::MFTDecoder::SetMediaTypes(IMFMediaType*, IMFMediaType*, long (*)(IMFMediaType*, void*), void*) dom/media/platforms/wmf/MFTDecoder.cpp:62
22 xul.dll mozilla::D3D11DXVA2Manager::ConfigureForSize(unsigned int, unsigned int) dom/media/platforms/wmf/DXVA2Manager.cpp:853
23 xul.dll mozilla::WMFVideoMFTManager::ConfigureVideoFrameGeometry() dom/media/platforms/wmf/WMFVideoMFTManager.cpp:405
24 @0xfffff
25 xul.dll mozilla::WMFVideoMFTManager::Output(__int64, RefPtr<mozilla::MediaData>&) dom/media/platforms/wmf/WMFVideoMFTManager.cpp:583
26 xul.dll mozilla::WMFVideoMFTManager::Output(__int64, RefPtr<mozilla::MediaData>&) dom/media/platforms/wmf/WMFVideoMFTManager.cpp:592
Ø 27 msmpeg2vdec.dll msmpeg2vdec.dll@0x63bac
28 xul.dll mozilla::WMFMediaDataDecoder::ProcessOutput() dom/media/platforms/wmf/WMFMediaDataDecoder.cpp:153
29 xul.dll mozilla::WMFMediaDataDecoder::ProcessDecode(mozilla::MediaRawData*) dom/media/platforms/wmf/WMFMediaDataDecoder.cpp:144
30 xul.dll nsRunnableMethodImpl<void ( mozilla::MediaDecoderStateMachine::*)(mozilla::MediaDecoder*), 1, RefPtr<mozilla::MediaDecoder> >::Run() xpcom/glue/nsThreadUtils.h:870
31 xul.dll mozilla::TaskQueue::Runner::Run() xpcom/threads/TaskQueue.cpp:170
32 xul.dll nsThreadPool::Run() xpcom/threads/nsThreadPool.cpp:227
33 xul.dll nsThread::ProcessNextEvent(bool, bool*) xpcom/threads/nsThread.cpp:994
those crashes are starting with 47 builds. maybe we'll have to blocklist d3d11 dxva with the isonyvideoprocessor.dll/isonyvideoprocessor64.dll module as well.
| Assignee | ||
Comment 2•9 years ago
|
||
Assuming you mean "blacklist the reported isonyvideoprocessor.dll's", I'm on it.
Assignee: nobody → gsquelart
Flags: needinfo?(gsquelart)
| Assignee | ||
Comment 3•9 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/53158/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/53158/
Attachment #8753279 -
Flags: review?(cpearce)
| Assignee | ||
Comment 4•9 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/53214/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/53214/
Attachment #8753315 -
Flags: review?(cpearce)
| Assignee | ||
Comment 5•9 years ago
|
||
Comment on attachment 8753315 [details]
MozReview Request: Bug 1273406 - Ugly macros transform into beautiful constexpr goodness - r?cpearce
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/53214/diff/1-2/
Updated•9 years ago
|
Component: Audio/Video → Audio/Video: Playback
Comment 6•9 years ago
|
||
Comment on attachment 8753279 [details]
MozReview Request: Bug 1273406 - Disable D3D11 with some iSonyVideoProcessor DLLs - r?cpearce
https://reviewboard.mozilla.org/r/53158/#review50128
Attachment #8753279 -
Flags: review?(cpearce) → review+
Updated•9 years ago
|
Attachment #8753315 -
Flags: review?(cpearce) → review+
Comment 7•9 years ago
|
||
Comment on attachment 8753315 [details]
MozReview Request: Bug 1273406 - Ugly macros transform into beautiful constexpr goodness - r?cpearce
https://reviewboard.mozilla.org/r/53214/#review50130
Comment 9•9 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/e6d52723aa38
https://hg.mozilla.org/mozilla-central/rev/de61823b8e8a
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox49:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
| Assignee | ||
Comment 10•9 years ago
|
||
Fixed in 48 by landing bug 1273691 there.
(And 47 is also affected.)
status-firefox47:
--- → affected
status-firefox48:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•