Bug 1273406 - Disable D3D11 with some iSonyVideoProcessor DLLs - r=cpearce

MozReview-Commit-ID: EWgqJ6OJhRD

--HG--
extra : rebase_source : 2659699b172a90d3b2cc1e8f2b74c7b513c70a06